Kubernetes-files/auth-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-ns
  labels:
    name: auth-ns
