Kubernetes-files/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-ns
  labels:
    app: auth-service
    monitoring: enabled
spec:
  selector:
    app: auth-service
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: metrics
    port: 8001
    targetPort: 8001
