Kubernetes-files/auth-service/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth-ns
  annotations:
    kubernetes.io/ingress.class: alb

    # ALB configuration
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # Health check
    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  rules:
  - http:
      paths:
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80

      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
    
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
